# trading-app

./: .env.example  README.md  pyproject.toml
src/trading_app/: __init__.py  config.py  main.py
