[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-app"
version = "0.1.0"
description = "Baseline CLI project for trading workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
  "pandas>=2.0",
  "typer>=0.12"
]

[project.scripts]
trading-app = "trading_app.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
